--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "custom-delete-modal",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
