--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-   "build": "tsc",
+    "build": "tsc",
+    "build:css": "postcss dist/assets/tailwind.css -o dist/assets/tailwind-generated.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,9 +19,15 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "cssnano": "^5.1.13",
+    "autoprefixer": "^10.4.9",
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^5.6.3"
   }
 }
